# URMA-TLR

./: .gitignore  .gitmodules  Makefile
dsl_firmware/: README.md
include/: tlr_assert.h  tlr_common.h  tlr_eintr.h
lib/config_mgr/: .gitignore  Makefile  access.c  action.c  apply.c  base32.c  base32.h  config_cmd.c  config_last.c  config_mgr.h  config_status.h  config_util.c  custom_valid.c  custom_valid.h  inittab  pam_dlr_api.h  password.c  password.h  password_gen.c  password_gen.h  show.c  status.c  test_interface_manager.c  tlr_backup.c  tlr_backup.h  tlr_show_object.c  uci_interface.c  uci_interface.h  validate.c  validate.h
lib/libcellular/: Makefile  cellular_count.c  cellular_csid.c  cellular_def.h  cellular_status.c  cellular_status.h
lib/libdigiutils/: Makefile  bank.c  bootloader_version.c  config_file.c  config_file_helper.c  config_file_write_firewall.c  config_utils.c  create_file_list.c  create_worker_thread.c  daemonize.c  digiuci.c  element.c  firewall_utils.c  firmware_version.c  get_field.c  get_instance.c  getlinefd.c  ip_helper.c  iptables.c  lr54leds.c  odm_specific.c  replace_char.c  security.c  serial_number.c  show_parse_helper.c  show_status_helper.c  strip_whitespace.c  strlcat.c  strlcpy.c  system_command.c  timespec_helpers.c  tlr_file.c  tlr_format_string.c  tlr_popen.c  tlr_print.c
lib/libifuptime/: Makefile  ifuptime_lib.c  ifuptime_lib.h  libifuptime_defs.h
lib/message/: Makefile  args.c  event_manager.c  event_queue.c  interfaces.c  message_codes.c  messages.c  messages_private.h  parsing.c  parsing_get_wan_message_info.c  plain_socket.c  queue.c  socket.c  timer_timval.c  update_message.c
misc/: .gitignore  Makefile
scripts/init/: S08webui.sh  S14cellular_monitor.sh  S15bridge_monitor.sh  S15dsl_monitor.sh  S16eth_monitor.sh  S16vpn_monitor.sh  S21ifmanager.sh
scripts/sbin/: rsyslog_rotate
sdk/: .gitignore  GPL_readme.txt  How_to_add_an_application.txt  Makefile  PROJECT  TOOLPATH
sdk/bootloader/: Makefile
sdk/busybox/: Config.mini  Makefile  makefile.envars
sdk/linux/: .gitignore  Config  Makefile  makefile.envars
sdk/project_config/: .gitignore  Makefile  project.cflags  project.config  project.instcomp
sdk/rootfs/: .gitignore  Makefile  makefile.compo  makefile.config  makefile.envars  makefile.install
sdk/rootfs/src/open_src/apparmor/src/libraries/libapparmor/: Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.in  libapparmor1.spec
sdk/rootfs/src/open_src/apparmor/src/libraries/libapparmor/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
sdk/rootfs/src/open_src/apparmor/src/libraries/libapparmor/doc/: Makefile.am  Makefile.in  aa_change_hat.pod  aa_change_profile.pod  aa_find_mountpoint.pod  aa_getcon.pod
sdk/rootfs/src/open_src/apparmor/src/libraries/libapparmor/m4/: ac_pod2man.m4
sdk/rootfs/src/open_src/apparmor/src/libraries/libapparmor/src/: Makefile.am  Makefile.in  aalogparse.h  apparmor.h  grammar.y  kernel_interface.c  libaalogparse.c  libapparmor.map  libimmunix_warning.c  scanner.l  tst_aalogmisc.c
sdk/rootfs/src/open_src/apparmor/src/libraries/libapparmor/swig/: Makefile.in
sdk/rootfs/src/open_src/apparmor/src/libraries/libapparmor/swig/SWIG/: libapparmor.i
sdk/rootfs/src/open_src/apparmor/src/libraries/libapparmor/swig/perl/: Makefile.PL.in  Makefile.am  Makefile.in
sdk/rootfs/src/open_src/apparmor/src/libraries/libapparmor/swig/python/: Makefile.am  Makefile.in  setup.py.in
sdk/rootfs/src/open_src/apparmor/src/libraries/libapparmor/swig/ruby/: Makefile.am  Makefile.in
sdk/rootfs/src/open_src/apparmor/src/libraries/libapparmor/testsuite/: Makefile.am  Makefile.in  test_multi.c
sdk/rootfs/src/open_src/apparmor/src/libraries/libapparmor/testsuite/config/: Makefile.in
sdk/rootfs/src/open_src/apparmor/src/libraries/libapparmor/testsuite/lib/: Makefile.in
sdk/rootfs/src/open_src/apparmor/src/libraries/libapparmor/testsuite/libaalogparse.test/: Makefile.in
sdk/rootfs/src/open_src/apparmor/src/libraries/libapparmor/testsuite/test_multi/: avc_audit_01.out  avc_audit_02.out  avc_audit_03.out  avc_audit_invalid_audit_id.out  avc_syslog_01.out  avc_syslog_02.out  avc_syslog_03.out  old_style_log_01.out  old_style_log_02.out  old_style_log_03.out  old_style_log_04.out  old_style_log_05.out  old_style_log_06.out  old_style_log_07.out  old_style_log_08.out  old_style_log_09.out  old_style_log_10.out  old_style_log_11.out  old_style_log_12.out  old_style_log_13.out  old_style_log_14.out  old_style_log_15.out  old_style_log_16.out  old_style_log_17.out  old_style_log_18.out  syslog_audit_05.out  syslog_audit_06.out  syslog_datetime_01.out  syslog_datetime_02.out  syslog_datetime_03.out  syslog_datetime_04.out  syslog_datetime_05.out  syslog_datetime_06.out  syslog_datetime_07.out  syslog_datetime_08.out  syslog_datetime_09.out  syslog_datetime_10.out  syslog_datetime_11.out  syslog_datetime_12.out  syslog_datetime_13.out  (+54 more)
sdk/tools/: Makefile
tools/adsl_cmd/: .gitignore  Makefile  ci_cmd.h  main.c  net_util.c  net_util.h  parse_str.c  parse_str.h  tc_api.c
tools/bridge_monitor/: .gitignore  Makefile  bridge_dns.c  bridge_dns.h  bridge_interfaces.c  bridge_interfaces.h  bridge_interfaces_update.c  bridge_interfaces_update.h  bridge_monitor.h  bridge_monitor_config.c  bridge_monitor_config.h  bridge_monitor_config_commands.c  bridge_monitor_config_commands.h  bridge_monitor_event.c  bridge_monitor_event.h  bridge_monitor_event_alloc.c  bridge_monitor_event_alloc.h  bridge_monitor_event_handlers.c  bridge_monitor_event_handlers.h  bridge_monitor_init.c  bridge_monitor_init.h  bridge_monitor_log.h  bridge_monitor_main.c  bridge_monitor_message.c  bridge_monitor_message.h  bridge_monitor_timers.c  bridge_monitor_timers.h
tools/cellular_monitor/: .gitignore  Makefile  cellular_config.c  cellular_config.h  cellular_led.c  cellular_led.h  cellular_message.c  cellular_message.h  cellular_modem.c  cellular_modem.h  cellular_monitor.c  cellular_monitor.h  cellular_odis.c  cellular_odis.h  cellular_passthrough.c  context.h  (+5 more)
unit_test/: Makefile
(+3463 files in other folders)
